[package]
name = "wasker"
version = "0.1.0"
edition = "2021"
description = "Wasm compiler for running Wasm on your favorite kernel"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
inkwell = { version = "0.1.1", features = ["llvm15-0"] }
wat = "1.0.67"
wasmparser = "0.102.0"
clap = { version = "4.4.3", features = ["derive"]}
log = "0.4.20"
env_logger = "0.10.0"
pretty-hex = "0.3.0"
wast = "70.0.2"
