[package]
name = "wasker"
version = "0.1.0"
edition = "2021"
description = "Wasm compiler for running Wasm on your favorite kernel"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
inkwell = { version = "0.1.1", features = ["llvm15-0"] }
wat = "1.235.0"
wasmparser = "0.102.0"
clap = { version = "4.5.40", features = ["derive"]}
log = "0.4.20"
env_logger = "0.10.0"
wabt = "0.10.0"
pretty-hex = "0.4.1"
